--- a/simple/apps/core/templates/core/staff/staff-dashboard.html
+++ b/simple/apps/core/templates/core/staff/staff-dashboard.html
@@ -10,8 +10,7 @@
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a
                             href="/">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Teacher
-                        Dashboard</li>
+                    <li class="breadcrumb-item active">Staff Dashboard</li>
                 </ul>
             </div>
         </div>
