--- a/simple/apps/core/templates/core/student/add-student.html
+++ b/simple/apps/core/templates/core/student/add-student.html
@@ -2,180 +2,142 @@
 {% load static %}
 {% block main-block %}
 <div class="content container-fluid">
-    <div class="page-header">
-       <div class="row align-items-center">
-          <div class="col">
-             <h3 class="page-title">Add Students</h3>
-             <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{% url 'core:student-list' %}">Students</a></li>
-                <li class="breadcrumb-item active">Add Students</li>
-             </ul>
-          </div>
-       </div>
-    </div>
-    <div class="row">
-       <div class="col-sm-12">
-          <div class="card">
-             <div class="card-body">
-                <form>
-                   <div class="row">
-                      <div class="col-12">
-                         <h5 class="form-title"><span>Student Information</span></h5>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>First Name</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Last Name</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Student Id</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Gender</label>
-                            <select class="form-control">
-                               <option>Select Gender</option>
-                               <option>Female</option>
-                               <option>Male</option>
-                               <option>Others</option>
-                            </select>
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Date of Birth</label>
-                            <div>
-                               <input type="date" class="form-control">
-                            </div>
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Class</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Religion</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Joining Date</label>
-                            <div>
-                               <input type="date" class="form-control">
-                            </div>
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Mobile Number</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Admission Number</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Section</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Student Image</label>
-                            <input type="file" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12">
-                         <h5 class="form-title"><span>Parent Information</span></h5>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Father's Name</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Father's Occupation</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Father's Mobile</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Father's Email</label>
-                            <input type="email" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Mother's Name</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Mother's Occupation</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Mother's Mobile</label>
-                            <input type="text" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Mother's Email</label>
-                            <input type="email" class="form-control">
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Present Address</label>
-                            <textarea class="form-control"></textarea>
-                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6">
-                         <div class="form-group">
-                            <label>Permanent Address</label>
-                            <textarea class="form-control"></textarea>
-                         </div>
-                      </div>
-                      <div class="col-12">
-                         <button type="submit" class="btn btn-primary">Submit</button>
-                      </div>
-                   </div>
-                </form>
-             </div>
-          </div>
-       </div>
-    </div>
- </div>
+   <div class="page-header">
+      <div class="row align-items-center">
+         <div class="col">
+            <h3 class="page-title">{% if student %} Update Students {% else %} Add Students {% endif %}</h3>
+            <ul class="breadcrumb">
+               <li class="breadcrumb-item"><a href="{% url 'core:student-list'
+                     %}">Students</a></li>
+               <li class="breadcrumb-item active">{% if student %} Update Students {% else %} Add Students {% endif %}</li>
+            </ul>
+         </div>
+      </div>
+   </div>
+
+   {% include 'messages.html' %}
+
+   <div class="row">
+      <div class="col-sm-12">
+         <div class="card">
+            <div class="card-body">
+               {% if student %}
+               <form method="POST" action= "{% url 'core:update-student' id=student.id %}" enctype="multipart/form-data">
+               {% else %}
+               <form method="POST" action= "{% url 'core:add-student' %}" enctype="multipart/form-data">
+               {% endif %}            
+                  {% csrf_token %}
+                  <div class="col-12">
+                     <h5 class="form-title"><span>Student Information</span></h5>
+                  </div>
+                  <div class="col-sm-4">
+                     <div class="form-group">
+                        <label>Profile Pic</label>
+                        {% if i.admin.profile_pic %}
+                        <input type="file" class="form-control"
+                           name="profile_pic" required
+                           value="{{student.admin.profile_pic.url}}">
+                        {% else %}
+                        <input type="file" class="form-control"
+                           name="profile_pic" value="{% static
+                           'assets/img/profiles/placeholder_img.png' %}">
+                        {% endif %}
+                        
+                     </div>
+                  </div>
+                  
+
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>First Name</label>
+                        <input type="text" class="form-control"
+                           name="first_name" required
+                           value="{{student.admin.first_name}}">
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Last Name</label>
+                        <input type="text" class="form-control" name="last_name"
+                           required value="{{student.admin.last_name}}">
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" class="form-control" name="email"
+                           required value="{{student.admin.email}}">
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" class="form-control" name="username"
+                           required value="{{student.admin.username}}">
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control"
+                           name="password" placeholder="Fill only if you want to change password">
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Address</label>
+                        <textarea class="form-control" name="address" required>{{student.address}}</textarea>
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Gender</label>
+                        <select class="form-control" name="gender" required>
+                           <option>Select Gender</option>
+                           <option value="Female" {% if student.gender == "Female" %}selected="selected"{% endif %}>Female</option>
+                           <option value="Male" {% if student.gender == "Male" %}selected="selected"{% endif %}>Male</option>
+                           <option value="Others" {% if student.gender == "Others" %}selected="selected"{% endif %}>Others</option>
+                        </select>
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Course Name</label>
+                        <select class="form-control" name="course_id" required
+                           value="{{student.course_id}}">
+                           <option>Select Course</option>
+                           {% for i in courses %}
+                           <option value="{{i.id}}" {% if i == student.course_id %}selected="selected"{% endif %}>
+                              {{i.name}}
+                           </option>
+                           {% endfor %}
+                        </select>
+                     </div>
+                  </div>
+                  <div class="col-sm-11">
+                     <div class="form-group">
+                        <label>Session year</label>
+                        <select class="form-control" name="session_year_id"
+                           required value="{{student.session_id}}">
+                           <option>Select Session Year</option>
+                           {% for i in sessions %}       
+                           <option value="{{i.id}}" {% if i == student.session_id %}selected="selected"{% endif %}>
+                              {{i.session_start}} -
+                              {{i.session_end }}
+                           </option>
+                           {% endfor %}
+                        </select>
+                     </div>
+                  </div>
+                  <div class="col-12">
+                     <button type="submit" class="btn btn-primary">{% if student %} Update Student {% else %} Add Student {% endif %}</button>
+                  </div>
+               </form>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
 {% endblock %}
 
 {% block footer-block %}
