--- a/simple/apps/core/templates/core/student/student-dashboard.html
+++ b/simple/apps/core/templates/core/student/student-dashboard.html
@@ -6,7 +6,7 @@
     <div class="page-header">
         <div class="row">
             <div class="col-sm-12">
-                <h3 class="page-title">Welcome Bruklin!</h3>
+                <h3 class="page-title">Welcome {{ request.user.username | title}}</h3>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
                     <li class="breadcrumb-item active">Student Dashboard</li>
