--- a/simple/apps/core/templates/core/course/courses.html
+++ b/simple/apps/core/templates/core/course/courses.html
@@ -6,11 +6,11 @@
     <div class="page-header">
         <div class="row align-items-center">
             <div class="col">
-                <h3 class="page-title">Departments</h3>
+                <h3 class="page-title">Courses</h3>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a
                             href="/">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Departments</li>
+                    <li class="breadcrumb-item active">Courses</li>
                 </ul>
             </div>
             <div class="col-auto text-right float-right
@@ -18,7 +18,7 @@
                 <a href="#" class="btn btn-outline-primary
                     mr-2"><i class="fas fa-download"></i>
                     Download</a>
-                <a href="{% url 'core:add-department' %}" class="btn
+                <a href="{% url 'core:add-course' %}" class="btn
                     btn-primary"><i class="fas fa-plus"></i></a>
             </div>
         </div>
@@ -29,43 +29,38 @@
             <div class="card card-table">
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-hover
-                            table-center mb-0 datatable">
+                        <table id="table_id" class="table table-hover
+                            table-center mb-0">
                             <thead>
                                 <tr>
                                     <th>ID</th>
                                     <th>Name</th>
-                                    <th>HOD</th>
-                                    <th>Started Year</th>
-                                    <th>No of Students</th>
+                                    <th>Created_at</th>
+                                    <th>Updated_at</th>
                                     <th class="text-right">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in departments %}
+                                {% for i in courses %}
                                 <tr>
-                                    <td>PRE2209</td>
+                                    <td>{{i.id}}</td>
                                     <td>
                                         <h2>
-                                            <a>Computer Science
-                                                Engg</a>
+                                            <a>{{i.name}}</a>
                                         </h2>
                                     </td>
-                                    <td>Aaliyah</td>
-                                    <td>1995</td>
-                                    <td>180</td>
+                                    <td>{{i.created_at}}</td>
+                                    <td>{{i.updated_at}}</td>
                                     <td class="text-right">
                                         <div class="actions">
-                                            <a
-                                                href="{% url 'core:edit-department' %}"
+                                            <a href="{% url 'core:edit-course' id=i.id %}"
                                                 class="btn
                                                 btn-sm
                                                 bg-success-light
                                                 mr-2">
-                                                <i class="fas
-                                                    fa-pen"></i>
+                                                <i class="fas fa-pen"></i>
                                             </a>
-                                            <a href="#"
+                                            <a href="{% url 'core:delete-course' id=i.id %}"
                                                 class="btn
                                                 btn-sm
                                                 bg-danger-light">
