--- a/simple/apps/core/templates/core/index.html
+++ b/simple/apps/core/templates/core/index.html
@@ -22,7 +22,7 @@
               <i class="fas fa-user-graduate"></i>
             </div>
             <div class="db-info">
-              <h3>50055</h3>
+              <h3>{{staff_count}}+</h3>
               <h6>Students</h6>
             </div>
           </div>
@@ -34,12 +34,12 @@
         <div class="card-body">
           <div class="db-widgets d-flex justify-content-between
             align-items-center">
-            <div class="db-icon">
-              <i class="fas fa-crown"></i>
+            <div class="db-icon">              
+              <i class="fas fa-chalkboard-teacher"></i>
             </div>
             <div class="db-info">
-              <h3>50+</h3>
-              <h6>Awards</h6>
+              <h3>{{student_count}}+</h3>
+              <h6>Staff</h6>
             </div>
           </div>
         </div>
@@ -51,11 +51,11 @@
           <div class="db-widgets d-flex justify-content-between
             align-items-center">
             <div class="db-icon">
-              <i class="fas fa-building"></i>
+              <i class="fas fa-graduation-cap"></i>
             </div>
             <div class="db-info">
-              <h3>30+</h3>
-              <h6>Department</h6>
+              <h3>{{course_count}}+</h3>
+              <h6>Course</h6>
             </div>
           </div>
         </div>
@@ -67,11 +67,11 @@
           <div class="db-widgets d-flex justify-content-between
             align-items-center">
             <div class="db-icon">
-              <i class="fas fa-file-invoice-dollar"></i>
+              <i class="fas fa-book"></i>
             </div>
             <div class="db-info">
-              <h3>$505</h3>
-              <h6>Revenue</h6>
+              <h3>{{subject_count}}+</h3>
+              <h6>Subject</h6>
             </div>
           </div>
         </div>
@@ -84,25 +84,12 @@
         <div class="card-header">
           <div class="row align-items-center">
             <div class="col-6">
-              <h5 class="card-title">Revenue</h5>
-            </div>
-            <div class="col-6">
-              <ul class="list-inline-group text-right mb-0 pl-0">
-                <li class="list-inline-item">
-                  <div class="form-group mb-0 amount-spent-select">
-                    <select class="form-control form-control-sm">
-                      <option>Today</option>
-                      <option>Last Week</option>
-                      <option>Last Month</option>
-                    </select>
-                  </div>
-                </li>
-              </ul>
+              <h5 class="card-title">All Data</h5>
             </div>
           </div>
         </div>
         <div class="card-body">
-          <div id="apexcharts-area"></div>
+          <div id="all_details"></div>
         </div>
       </div>
     </div>
@@ -113,23 +100,40 @@
             <div class="col-6">
               <h5 class="card-title">Number of Students</h5>
             </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div id="stud_gender"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 col-lg-6">
+      <div class="card card-chart">
+        <div class="card-header">
+          <div class="row align-items-center">
             <div class="col-6">
-              <ul class="list-inline-group text-right mb-0 pl-0">
-                <li class="list-inline-item">
-                  <div class="form-group mb-0 amount-spent-select">
-                    <select class="form-control form-control-sm">
-                      <option>Today</option>
-                      <option>Last Week</option>
-                      <option>Last Month</option>
-                    </select>
-                  </div>
-                </li>
-              </ul>
+              <h5 class="card-title">All Data</h5>
             </div>
           </div>
         </div>
         <div class="card-body">
-          <div id="bar"></div>
+          <div id="donut_chart"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 col-lg-6">
+      <div class="card card-chart">
+        <div class="card-header">
+          <div class="row align-items-center">
+            <div class="col-6">
+              <h5 class="card-title">Number of Students</h5>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div id="gradient_donut"></div>
         </div>
       </div>
     </div>
