--- a/simple/apps/core/templates/core/student/students.html
+++ b/simple/apps/core/templates/core/student/students.html
@@ -19,60 +19,74 @@
             </div>
         </div>
     </div>
+    {% include 'messages.html' %}
     <div class="row">
         <div class="col-sm-12">
             <div class="card card-table">
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-hover table-center mb-0
-                            datatable">
+                        <table id="table_id" class="table table-hover table-center mb-0">
                             <thead>
                                 <tr>
                                     <th>ID</th>
                                     <th>Name</th>
-                                    <th>Class</th>
-                                    <th>DOB</th>
-                                    <th>Parent Name</th>
-                                    <th>Mobile Number</th>
+                                    <th>Email</th>
+                                    <th>Course</th>
+                                    <th>Gender</th>
                                     <th>Address</th>
+                                    <th>Session Year</th>
+                                    <th>Created_at</th>
+                                    <th>Updated_at</th>
                                     <th class="text-right">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for i in students %}
                                 <tr>
-                                    <td>PRE2209</td>
+                                    <td>{{i.id}}</td>
                                     <td>
                                         <h2 class="table-avatar">
+                                            {% if i.admin.profile_pic %}
                                             <a href="{% url 'core:student-details' %}"
                                                 class="avatar avatar-sm mr-2"><img
                                                     class="avatar-img
-                                                    rounded-circle"
-                                                    src="{% static 'assets/img/profiles/avatar-01.jpg' %}"
+                                                    rounded-circle"                                                    
+                                                    src= "{{ i.admin.profile_pic.url }}"
                                                     alt="User Image"></a>
-                                            <a href="{% url 'core:student-details' %}">Aaliyah</a>
+                                            {% else %}
+                                            <a href="{% url 'core:student-details' %}"
+                                            class="avatar avatar-sm mr-2"><img
+                                                class="avatar-img
+                                                rounded-circle"                                                    
+                                                src= "{% static 'assets/img/profiles/placeholder_img.png' %}"
+                                                alt="User Image"></a>
+                                            <a href="{% url 'core:student-details' %}">
+                                            {% endif %}
+                                            {{i.admin.username}}</a>
                                         </h2>
                                     </td>
-                                    <td>10 A</td>
-                                    <td>2 Feb 2002</td>
-                                    <td>Jeffrey Wong</td>
-                                    <td>097 3584 5870</td>
-                                    <td>911 Deer Ridge Drive,USA</td>
+                                    <td>{{i.admin.email}}</td>
+                                    <td>{{i.course_id.name}}</td>
+                                    <td>{{i.gender}}</td>
+                                    <td>{{i.address}}</td>
+                                    <td>{{i.session_id.session_start}}-{{i.session_id.session_end}}</td>
+                                    <td>{{i.created_at}}</td>
+                                    <td>{{i.updated_at}}</td>
                                     <td class="text-right">
                                         <div class="actions">
-                                            <a href="{% url 'core:edit-student' %}"
+                                            <a href="{% url 'core:edit-student' id=i.id %}"
                                                 class="btn btn-sm
                                                 bg-success-light mr-2">
                                                 <i class="fas fa-pen"></i>
                                             </a>
-                                            <a href="#" class="btn btn-sm
+                                            <a href="{% url 'core:delete-student' id=i.admin_id %}" class="btn btn-sm
                                                 bg-danger-light">
                                                 <i class="fas fa-trash"></i>
                                             </a>
                                         </div>
                                     </td>
                                 </tr>     
-                                {% endfor %}                    
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
