--- a/simple/apps/core/templates/core/subject/subjects.html
+++ b/simple/apps/core/templates/core/subject/subjects.html
@@ -22,36 +22,42 @@
           <div class="card card-table">
              <div class="card-body">
                 <div class="table-responsive">
-                   <table class="table table-hover table-center mb-0 datatable">
+                   <table id="table_id" class="table table-hover table-center mb-0">
                       <thead>
                          <tr>
                             <th>ID</th>
                             <th>Name</th>
-                            <th>Class</th>
+                            <th>Course</th>
+                            <th>Staff</th>                            
+                            <th>Created_at</th>
+                            <th>Updated_at</th>
                             <th class="text-right">Action</th>
                          </tr>
                       </thead>
                       <tbody>
                         {% for i in subjects %}
                         <tr>
-                            <td>PRE2209</td>
+                            <td>{{i.id}}</td>
                             <td>
                                <h2>
-                                  <a>Mathematics</a>
+                                  <a>{{i.name}}</a>
                                </h2>
                             </td>
-                            <td>5</td>
+                            <td>{{i.course_id.name}}</td>
+                            <td>{{i.staff_id.admin.username}}</td>
+                            <td>{{i.created_at}}</td>
+                            <td>{{i.updated_at}}</td>
                             <td class="text-right">
-                               <div class="actions">
-                                  <a href="{% url 'core:edit-subject' %}" class="btn btn-sm bg-success-light mr-2">
-                                  <i class="fas fa-pen"></i>
-                                  </a>
-                                  <a href="#" class="btn btn-sm bg-danger-light">
-                                  <i class="fas fa-trash"></i>
-                                  </a>
-                               </div>
-                            </td>
-                         </tr>                       
+                              <div class="actions">
+                                 <a href="{% url 'core:edit-subject' id=i.id %}" class="btn btn-sm bg-success-light mr-2">
+                                 <i class="fas fa-pen"></i>
+                                 </a>
+                                 <a href="{% url 'core:delete-subject' id=i.id %}" class="btn btn-sm bg-danger-light">
+                                 <i class="fas fa-trash"></i>
+                                 </a>
+                              </div>
+                           </td>             
+                         </tr>                                   
                         {% endfor %}
                       </tbody>
                    </table>
