--- a/simple/templates/authentication/register.html
+++ b/simple/templates/authentication/register.html
@@ -15,23 +15,23 @@
                     <div class="login-right-wrap">
                         <h1>Register</h1>
                         <p class="account-subtitle">Access to our dashboard</p>
-                        <form
-                            action="https://preschool.dreamguystech.com/html-template/login.html">
+                        <form action="" method="POST">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <input class="form-control" type="text"
-                                    placeholder="Name">
+                                    placeholder="Name" name="username">
                             </div>
                             <div class="form-group">
                                 <input class="form-control" type="text"
-                                    placeholder="Email">
+                                    placeholder="Email" name="email">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text"
-                                    placeholder="Password">
+                                <input class="form-control" type="password"
+                                    placeholder="Password" name="password1">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text"
-                                    placeholder="Confirm Password">
+                                <input class="form-control" type="password"
+                                    placeholder="Confirm Password" name="password2">
                             </div>
                             <div class="form-group mb-0">
                                 <button class="btn btn-primary btn-block"
